Mon Sep 12 13:12:38 1994  Gray Watson  (gray@blender.antaire.com)

	* Fixed zsh and [t]csh alias messages in documentation.

	* Added install.sh to distribution per feedback from Francois.

Mon Sep 12 10:07:29 1994  Gray Watson  (gray at toaster.antaire.com)

	* Renamed _dmalloc_error to dmalloc_error since it is used
	externally so often.  Sorry folks.

	* Removed time() and getpid() from compat functions.  Moved
	HAVE_... tests into the code that used them.  Duhhhh.

	* Changed DMALLOC_DEBUG_DISABLE flag to DMALLOC_DISABLE.

	* Fixed some include file auto-include messages from feedback from
	Francois.

Thu Sep  8 10:07:56 1994  Gray Watson  (gray@blender.antaire.com)

	* Releasing version 3.0.0.

	* Fixed a problem with some list checking via user feedback.

Fri Sep  2 17:34:02 1994  Gray Watson  (gray@blender.antaire.com)

	* Fixed possible recursion problem via feedback from Marty.

Mon Aug 29 11:08:36 1994  Gray Watson  (gray@blender.antaire.com)

	* Tons of name changes going from malloc_dbg -> dmalloc.  Lots of
	files, internal/external routines, variables, etc.

Sat Aug 27 19:33:16 1994  Gray Watson  (gray@blender.antaire.com)

	* Releasing 2.2.1 so I make the name shifts.

	* Fixed problem with IMPORT in malloc_dbg.3 via user feedback.

Mon Aug  8 22:43:44 1994  Gray Watson  (gray@mixer.antaire.com)

	* Releasing version 2.2.0.

Mon Aug  8 22:29:11 1994  Gray Watson  (gray at toaster.antaire.com)

	* Added no-special test option to malloc_t.

	* Fixed problem with merging adjacent free blocks if last/first
	block being freed.

Wed Aug  3 14:28:20 1994  Gray Watson  (gray@blender.antaire.com)

	* Fixed xmalloc,xrealloc,etc. override functions.

	* Added xstrdup to the x leap function list.

Mon Aug  1 23:03:50 1994  Gray Watson  (gray@blender.antaire.com)

	* Added $verbose checks in configure from francois' feedback.

	* Added 'err' label to error printing from francois' feedback.

Fri Jul 22 11:48:26 1994  Gray Watson  (gray@blender.antaire.com)
