@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: NOTES,v 1.27 1994/09/10 23:26:46 gray Exp $
+$Id: NOTES,v 1.28 1994/09/13 15:36:47 gray Exp $
 -------------------------------------------------------------------------------
 
 WARNINGS:
@@ -65,6 +65,12 @@ GENERAL:
 	- it would slow it down a bit
 	- maybe some token/option?
 	- \305 is recognizable however
+
+-	zsh users may want to try either of the following as dmalloc
+	function overloading is NO_EQUALS is not set:
+
+		dmalloc() { eval `=dmalloc -b $*` }
+		alias dmalloc='eval `=dmalloc -b $*` }
 
 -------------------------------------------------------------------------------
 
